# ClaudeCodeLooper

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  README.md  REFACTORING_COMPLETE.md  install.bat  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
.claude/commands/: README.md  cl-logs.md  cl-off.md  cl-on.md  cl-queue-delete.md  cl-queue-list.md  cl-queue-templates.md  cl-queue.md  cl-status.md  commands.json
.github/workflows/: ci.yml  release.yml
docs/: implementation-roadmap.md  prompt-mechanism.md  verification-checklist.md
specs/001-5-5-5/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-5-5-5/contracts/: cli-interface.md  monitoring-api.json
src/: __init__.py  exceptions.py
src/cli/: main.py
src/cli/commands/: config.py  logs.py  queue.py  start.py  status.py  stop.py
src/lib/: __init__.py  logging_config.py  signal_handler.py  windows_process.py
src/models/: limit_detection_event.py  monitoring_session.py  queued_task.py  restart_command_config.py  system_configuration.py  task_completion_monitor.py  waiting_period.py
src/services/: config_manager.py  health_checker.py  output_capture.py  pattern_detector.py  process_launcher.py  process_monitor.py  process_monitor.py.backup  restart_controller.py  state_manager.py  task_queue.py  template_manager.py  timing_manager.py
src/utils/: __init__.py  logging.py
tests/: conftest.py
tests/contract/: test_cli_config.py  test_cli_logs.py  test_cli_start.py  test_cli_status.py  test_cli_stop.py
tests/integration/: test_config_validation.py  test_error_recovery.py  test_limit_detection.py  test_process_monitoring.py  test_restart_cycle.py
tests/unit/: __init__.py  test_exceptions.py
tests/unit/models/: test_system_configuration.py
tests/unit/services/: test_pattern_detector.py  test_task_queue.py  test_template_manager.py
tests/unit/utils/: test_logging.py
